--- a/my_server.cnf
+++ b/my_server.cnf
@@ -1,6 +1,6 @@
 [client]
 port = 3306
-socket = /tmp/mysql.sock
+#socket = /tmp/mysql.sock
 
 [mysql]
 prompt="MySQL [\d]> "
@@ -8,7 +8,7 @@ no-auto-rehash
 
 [mysqld]
 port = 3306
-socket = /tmp/mysql.sock
+#socket = /tmp/mysql.sock
 
 basedir = /var/lib/mysql
 datadir = /var/lib/mysql/data
