--- a/my_server.cnf
+++ b/my_server.cnf
@@ -1,20 +1,20 @@
-[client]
-port = 3306
+#[client]
+#port = 3306
 #socket = /tmp/mysql.sock
 
-[mysql]
-prompt="MySQL [\d]> "
-no-auto-rehash
+#[mysql]
+#prompt="MySQL [\d]> "
+#no-auto-rehash
 
 [mysqld]
-port = 3306
+#port = 3306
 #socket = /tmp/mysql.sock
 
-basedir = /var/lib/mysql
-datadir = /var/lib/mysql/data
-pid-file = /var/lib/mysql/data/mysql.pid
-user = mysql
-bind-address = 0.0.0.0
+#basedir = /var/lib/mysql
+#datadir = /var/lib/mysql/data
+#pid-file = /var/lib/mysql/data/mysql.pid
+#user = mysql
+#bind-address = 0.0.0.0
 server-id = 1
 
 init-connect = 'SET NAMES utf8mb4'
@@ -51,10 +51,10 @@ log_bin = mysql-bin
 binlog_format = mixed
 expire_logs_days = 2
 
-log_error = /var/lib/mysql/data/mysql-error.log
+#log_error = /var/lib/mysql/mysql-error.log
 slow_query_log = 1
 long_query_time = 1
-slow_query_log_file = /var/lib/mysql/data/mysql-slow.log
+slow_query_log_file = /var/lib/mysql/mysql-slow.log
 
 performance_schema = 0
 
@@ -62,35 +62,35 @@ performance_schema = 0
 
 skip-external-locking
 
-default_storage_engine = InnoDB
-innodb_file_per_table = 1
-innodb_open_files = 500
-innodb_buffer_pool_size = 1024M
-innodb_write_io_threads = 4
-innodb_read_io_threads = 4
-innodb_thread_concurrency = 0
-innodb_purge_threads = 1
-innodb_flush_log_at_trx_commit = 2
-innodb_log_buffer_size = 2M
-innodb_log_file_size = 32M
-innodb_log_files_in_group = 3
-innodb_max_dirty_pages_pct = 90
-innodb_lock_wait_timeout = 120
+#default_storage_engine = InnoDB
+#innodb_file_per_table = 1
+#innodb_open_files = 500
+#innodb_buffer_pool_size = 1024M
+#innodb_write_io_threads = 4
+#innodb_read_io_threads = 4
+#innodb_thread_concurrency = 0
+#innodb_purge_threads = 1
+#innodb_flush_log_at_trx_commit = 2
+#innodb_log_buffer_size = 2M
+#innodb_log_file_size = 32M
+#innodb_log_files_in_group = 3
+#innodb_max_dirty_pages_pct = 90
+#innodb_lock_wait_timeout = 120
 
-bulk_insert_buffer_size = 8M
-myisam_sort_buffer_size = 64M
-myisam_max_sort_file_size = 10G
-myisam_repair_threads = 1
+#bulk_insert_buffer_size = 8M
+#myisam_sort_buffer_size = 64M
+#myisam_max_sort_file_size = 10G
+#myisam_repair_threads = 1
 
-interactive_timeout = 28800
-wait_timeout = 28800
+#interactive_timeout = 28800
+#wait_timeout = 28800
 
-[mysqldump]
-quick
-max_allowed_packet = 500M
+#[mysqldump]
+#quick
+#max_allowed_packet = 500M
 
-[myisamchk]
-key_buffer_size = 256M
-sort_buffer_size = 8M
-read_buffer = 4M
-write_buffer = 4M
+#[myisamchk]
+#key_buffer_size = 256M
+#sort_buffer_size = 8M
+#read_buffer = 4M
+#write_buffer = 4M
